<resources>
    <string name="app_name">Rajdhani Market</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_to_play">1. Download App\n\n 2. Click on the Sign in\n\n 3. Enter User Id and Password\n\n 4. Select Game and Play The Game</string>
    <string name="contact_us">Contact Us</string>
    <string name="email_rajdhani_gmail_com">Email (rajdhani@gmail.com)</string>
    <string name="bank_details">Bank Details</string>
    <string name="todo">TODO</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="account_number">Account Number</string>
    <string name="game_name_not_found">Game Name Not Found</string>
    <string name="notice">नोटिस\nWel come 🫴 Rajdhani market\n\n1👉👉 सबसे पहले प्ले स्टोर से ऐप डाउनलोड करें  \n\n2👉👉 फिर आपको अपने मोबाइल नंबर और पासवर्ड भरकर खुद को रजिस्टर करना होगा\n\n3👉👉 इसके बाद अपने खाते में कुछ पैसे जमा करें उसके लिए आपको ऐड फंड का बटन दबाना होगा\n\n4👉👉 न्यूनतम जमा राशि 500 है\n\n5👉👉 आप जमा करने के लिए किसी भी माध्यम का उपयोग कर सकते हैं गूगल पे पर फोन पे पेटीएम अकाउंट टू अकाउंट यूपीआई\n\n6👉👉 जितनी धनराशि आप जमा करोगे उतनी पॉइंट्स आपके अकाउंट में जमा होंगे (1rs___1प्वाइंट)\n\n7👉👉 खेल खेलने के लिए बाजार! खेल का प्रकार और अपना पसंदीदा नंबर का चयन करे यदि आप खेल खेलते हैं और आप जीते हैं तो आपका पॉइंट बढ़ेंगे\n\n8👉👉 आप हमारी एप्लीकेशन पर जाकर अपने खाते से पैसे निकाल सकते और पैसा आपके बैंक खाते में जमा हो जाएंगे विड्रोल की सुविधा 24 घंटे उपलब्ध है विड्रोल पैसा आपके बैंक खाते में वॉलेट पेटीएम फोनपे गूगल पे अकाउंट टू अकाउंट में जमा होंगे\n\n9👉👉 दिन में दो बार विड्रोल दिया जाता है दिन में 12:00 नाइट में 10:00 बजे तो घबराये नही हमारी तरफ से आपको कॉल आएगा अगर आप विड्रोल करते हैं तो</string>
    <string name="game_rate">Game Rate</string>
    <string name="withdraw">** Minimum withdrawal 1000 Point **\n** Withdrawal time 10 am to 10 pm **</string>

    <string name="des">WEL COME 🫴 TO RAJDHANI MARKET \n\nDEPOSIT KARANE के LIYE WHATSAPP PE MESSAGE KRE DEPOSIT करने के लिऐ व्हाट्सएप पर मैसेज करे \n\nMESSAGE ON WHATSAPP TO DEPOSIT\n\n👉👉 न्यूनतम जमा राशि 500 है\n\n👉👉 आप जमा करने के लिए किसी भी माध्यम का उपयोग कर सकते हैं गूगल पे पर फोन पे पेटीएम अकाउंट टू अकाउंट यूपीआई\n\n👉👉 जितनी धनराशि आप जमा करोगे उतनी पॉइंट्स आपके अकाउंट में जमा होंगे (1rs___1प्वाइंट)</string>
    <string name="zzzz">Open</string>
    <string name="nh">*******</string>
    <string name="mavadev_morning"> Mahadev Morning
    </string>
    <string name="_10_00_pm">10.00 PM</string>
    <string name="closed">Closed:  </string>
    <string name="_12_00_am">12.00 AM</string>
    <string name="open">Open: </string>
</resources>